# churn-risk-scorer

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: API.md  USAGE.md
src/churn_risk_scorer/: __init__.py  __main__.py  batch_processor.py  cli.py  config.py  data_loader.py  exceptions.py  logging_config.py  model_persistence.py  preprocessor.py  scorer.py  visualizer.py
tests/: __init__.py  conftest.py  test_batch_processor.py  test_data_loader.py  test_exceptions.py  test_model_persistence.py  test_preprocessor.py  test_scorer.py  test_visualizer.py
